--- a/MyTradeMTG/Views/Master/PackageMaster.cshtml
+++ b/MyTradeMTG/Views/Master/PackageMaster.cshtml
@@ -91,7 +91,7 @@
                             </div>
                             <div class="col-md-3" id="divdays" style="display:none">
                                 <div class="form-group">
-                                    <label class="col-form-label">Return Days <span style="color: red">*</span></label>
+                                    <label class="col-form-label">Return Days/Month <span style="color: red">*</span></label>
                                     @Html.TextBoxFor(m => m.Days, new { @class = "form-control", @onkeypress = "return isNumberKey(event)" })
                                 </div>
                             </div>
