--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -425,8 +425,8 @@
                                     <div class="text-center">
                                         <img class="mb-3 rounded" src="@ViewBag.ProfilePic" alt="" height="150">
                                         <h6 class="text-black mb-0">@ViewBag.CustomerName</h6>
-                                        <b style="font-size:small;">MTG CA<br /></b>
-                                        <span style="font-weight:bold;font-size:0.8rem;">(@ViewBag.CustomerId)</span>
+                                        <b style="font-size:small;">Contact Address<br /></b>
+                                        <span style="font-weight:bold;font-size:0.8rem;">@ViewBag.CustomerId</span>
                                     </div>
                                 </div>
 
@@ -487,7 +487,7 @@
                                     <label>MTG/USDT</label>
                                     <input type="text" readonly="" class="form-control" value="@ViewBag.TotalWalletAmount">
                                 </div>
-                                <a href="/User/WalletTransfer" class="btn btn-primary d-block btn-lg text-uppercase">Quick Send MTG</a>
+                                <a href="/User/WalletTransfer" class="btn btn-primary d-block btn-lg text-uppercase">Quick Send</a>
                             </div>
                         </div>
                     </div>
