--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -284,15 +284,15 @@
                     <li>
                         <a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
                             <i class="fas fa-wallet"></i>
-                            <span class="nav-text">MTG Wallet</span>
+                            <span class="nav-text">MTG Reports</span>
                         </a>
                         <ul aria-expanded="false">
                             @*@if (Session["IdActivated"] != null)
                                 {
                                     if (Convert.ToBoolean(Session["IdActivated"]) == true)
                                     {*@
-                            <li><a href="/Wallet/AddWallet">Buy MTG Request</a></li>
-                            <li><a href="/Wallet/WalletList">Buy MTG Request List</a></li>
+                            <li><a href="/Wallet/AddWallet">Buy MTG </a></li>
+                            <li><a href="/Wallet/WalletList">Buy MTG List</a></li>
                             <li><a href="/Wallet/WalletLedgerList">MTG Ledger</a></li>
                             <li><a href="/User/WalletTransfer">Quick Send MTG</a></li>
 
