--- a/MyTradeMTG/Views/User/BankDetailsUpdate.cshtml
+++ b/MyTradeMTG/Views/User/BankDetailsUpdate.cshtml
@@ -419,7 +419,7 @@
             };
         </script>
 
-        @if (TempData["msg"] != null)
+        @if (TempData["msg1"] != null)
         {
             <script>
                 $(document).ready(function () {
