--- a/MyTradeMTG/Views/User/PayoutRequest.cshtml
+++ b/MyTradeMTG/Views/User/PayoutRequest.cshtml
@@ -30,6 +30,13 @@
                             @*<p style="color:red">Note : 2% Procecing Charges And 5% TDS Charge</p><br />*@
                             <p style="color:red">Note : 10% Processing Charges</p><br />
                             <div class="row">
+                                @*<input type="hidden" id="IsFill123" value="@Model.IsFill">*@
+
+                                @*<input type="hidden" id="IsFill123" value="@Session["IsFill"]">*@
+
+                                <input type="hidden" id="IsFill123" value="@Session["IsFill"]">
+
+
                                 <div class="col-lg-3 col-md-3">
                                     <div class="form-group">
                                         MTG /USDT Balance <span style="color: red">*</span>
@@ -49,7 +56,7 @@
 
 
                                         MTG /USDT<span style="color: red">*</span>
-                                        @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @Placeholder = "MTG /USDT", @onkeypress = "return isNumberKey(event);", @onInput = "return ConvertMony();", @Value="" })
+                                        @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @Placeholder = "MTG /USDT", @onkeypress = "return isNumberKey(event);", @onInput = "return ConvertMony();", @Value = "" })
 
 
                                     </div>
@@ -68,11 +75,11 @@
 
                                 <input type="hidden" id="Countryid" value="@Model.Country" />
                                 @*<div class="col-xl-3 mb-3" id="divusdoller" style="display:none">
-                                    <div class="example">
-                                        <p class="mb-1"> In US Doller<span style="color: red"></span></p>
-                                        <label id="InUsDoller" class="pt-3 form-control"></label>
-                                    </div>
-                                </div>*@
+                                        <div class="example">
+                                            <p class="mb-1"> In US Doller<span style="color: red"></span></p>
+                                            <label id="InUsDoller" class="pt-3 form-control"></label>
+                                        </div>
+                                    </div>*@
 
                                 <div class="col-xl-3 mb-3" id="dvinrupees" @*style="display:none"*@>
                                     <div class="example">
@@ -101,6 +108,7 @@
                                         <input class="btn btn-success pull-left" type="submit" value="Withdraw" id="PayoutRequest" name="PayoutRequest" onclick="return Validate()" />
                                         <input type="hidden" id="hdf" value="@Model.Status" />
                                         <input type="hidden" id="hdf1" value="@ViewBag.MenuStatus" />
+                                        @*<input type="hidden" id="IsFill" value="@Model.IsFill" />*@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6" style="margin-top:28px">
@@ -133,9 +141,9 @@
                                             <th>Net(MTG)</th>
                                             <th>Processing Charge(MTG)</th>
                                             <th>Gross(MTG)</th>
-                                            <th>Net</th>
-                                            <th>Processing Charge</th>
-                                            <th>Gross</th>
+                                            <th>Net(INR)</th>
+                                            @*<th>Processing Charge(INR)</th>
+                                                <th>Gross(INR)</th>*@
                                             <th>UPI ID</th>
                                             <th>IFSC Code</th>
                                             <th>Account No</th>
@@ -158,8 +166,8 @@
                                                         <td>@Item.TDSAmount (@Item.ProcessingFee)</td>
                                                         <td>@Item.GrossAmount</td>
                                                         <td>@Item.IndianValue</td>
-                                                        <td>@Item.TransferChargeInRupees</td>
-                                                        <td>@Item.GrossAmountRs</td>
+                                                        @*<td>@Item.TransferChargeInRupees</td>
+                                                            <td>@Item.GrossAmountRs</td>*@
                                                         <td>@Item.UPIID</td>
                                                         <td>@Item.IFSCCode</td>
                                                         <td>@Item.AccountNo</td>
@@ -346,7 +354,7 @@
 
         $("#perAmt").text(parseFloat(newmtgAmt));
 
-       
+
 
 
         var indrupees = parseFloat($("#IndianValue").val());
@@ -364,29 +372,29 @@
 <script>
     $(document).ready(function () {
         debugger;
-        //if ($("#hdf").val() != "Approved") {
-        //jQuery.noConflict();
-        //swal({
-        //    backdrop: true,
-        //    allowOutsideClick: false,
-        //    title: 'Warning!',
-        //    text: 'Your KYC is not updated. Please update your KYC first',
-        //    type: 'warning',
-        //    showCancelButton: 0,
-        //    confirmButtonText: 'OK',
-        //}).then(function (e) {
-        //    if (e.value) {
-        //        window.location = '/User/BankDetailsUpdate';
-        //    }
-        //})
+        if ($("#IsFill123").val() == "False") {
+            jQuery.noConflict();
+            swal({
+                backdrop: true,
+                allowOutsideClick: false,
+                title: 'Warning!',
+                text: 'Your KYC is not updated. Please update your KYC first',
+                type: 'warning',
+                showCancelButton: 0,
+                confirmButtonText: 'OK',
+            }).then(function (e) {
+                if (e.value) {
+                    window.location = '/User/BankDetailsUpdate';
+                }
+            })
 
-        //window.alert("Your KYC is not updated. Please update your KYC first.")
-        //window.location = '/User/BankDetailsUpdate';
-        //}
-        //else {
+            //window.alert("Your KYC is not updated. Please update your KYC first.")
+            //window.location = '/User/BankDetailsUpdate';
+        }
+        else {
 
-        //}
-        if ($("#hdf1").val() == "InActive") {
+        }
+        if ($("#IsFill123").val() == "True") {
             @*jQuery.noConflict();
                     swal({
                         backdrop: true,
@@ -410,6 +418,8 @@
         }
     })
 </script>
+
+
 
 
 @if (TempData["msg"] != null)
