--- a/MyTradeMTG/Views/Website/Index.cshtml
+++ b/MyTradeMTG/Views/Website/Index.cshtml
@@ -632,8 +632,8 @@
                         @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm Password*", @onblur = "return validateConfPassword();" })
                     </div>
                     <div class="col-lg-12 form-group">
-                        <input type="checkbox" class="mt-1" data-toggle="modal" data-target="#exampleModalScrollable">
-                        <label>I accept all <a href="javascript:void(0)">Terms &amp; Use.</a></label>
+                        <input type="checkbox" class="mt-1" id="checkboxvalue123" data-toggle="modal" data-target="#exampleModalScrollable">
+                        <label>I accept all <a href="javascript:void(0)" class="mt-1" data-toggle="modal" data-target="#exampleModalScrollable">Terms &amp; Use.</a></label>
                     </div>
                 </div>
 
@@ -884,7 +884,7 @@
     function saveregistration() {
         debugger;
         var CountryCode = $(".iti__selected-dial-code").text();
-        
+
         country1.innerHTML = country.value.replace(/ *\([^)]*\) */g, "");
 
         var Country = $("#country1").text();
@@ -906,7 +906,6 @@
             success: function (data) {
                 debugger;
                 if (data.Result == "1") {
-                    @*window.location.href = '@Url.Action("ConfirmRegistration", "Home")';*@
                     $("#UserDisplayName1").text(data.Name),
                     $("#UserLoginId1").text(data.LoginId),
                     $("#UserPassword1").text(data.Password),
@@ -916,6 +915,31 @@
                    $('.popupContainer').css('display', 'none');
                     $('#modal').css('display', 'none');
                     $("#confirm_registration").modal("show");
+                    @*window.location.href = '@Url.Action("Index", "Website")';*@
+
+                    $("#phone1").val("");
+                    $("#FirstName").val("");
+                    $("#LastName").val("");
+                    $("#SponsorId").val("");
+                    $("#LastName").val("");
+                    $("#Password2").val("");
+                    $("#ConfirmPassword").val("");
+                    $("#Email").val("");
+                    $("#SponsorName").text("");
+                    $('#checkboxvalue123').prop('checked', false);
+                    $("#confirm_registration").modal("show");
+                    $("#phone1").attr("disabled", false);
+                    $("#FirstName").attr("disabled", false);
+                    $("#LastName").attr("disabled", false);
+                    $("#SponsorId").attr("disabled", false);
+                    $("#LastName").attr("disabled", false);
+                    $("#Password2").attr("disabled", false);
+                    $("#ConfirmPassword").attr("disabled", false);
+                    $("#Email").attr("disabled", false);
+                    $('#Confirm').show();
+                    $('#Confirm').attr("disabled", false);
+                    $('#divReg').hide();
+                    $('#Register').attr("disabled", false);
                 }
                 else {
                     $("#divload").css({ 'display': 'none' });
@@ -925,6 +949,9 @@
 
         });
     }
+
+
+
     //function getstatecity() {
     //    $(".errortext").removeClass("errortext");
     //    $.ajax({
@@ -1009,6 +1036,7 @@
     }
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
 
 <script>
     $(document).ready(function () {
