--- a/MyTradeMTG/Views/Shared/Website_LayoutPage.cshtml
+++ b/MyTradeMTG/Views/Shared/Website_LayoutPage.cshtml
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-4">
                     <div class="site-logo">
-                        <a class="navbar-logo" href="index.html"><img src="~/MyTradeMTGWebsite/asset/img/wbg.gif" alt=""/></a>
+                        <a class="navbar-logo" href="/Website/Index"><img src="~/MyTradeMTGWebsite/asset/img/wbg.gif" alt=""/></a>
                     </div>
                 </div><!--- END Col -->
                 <div class="col-lg-9 col-md-9 col-sm-8">
