--- a/MyTradeMTG/Views/Shared/_Layout.cshtml
+++ b/MyTradeMTG/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
             Nav header start
         ***********************************-->
         <div class="nav-header">
-            <a href="/user/UserDashboard" class="brand-logo">
+            <a href="/Admin/AdminDashboard" class="brand-logo">
                 <img src="~/UserPanel/images/logo with bg.gif" class="img-fluid" style="width:12rem" />
                 @*<img src="~/UserPanel/images/MtgCoinPng.png" class="brand-title" />*@
                 @*<h4 class="brand-title">My Trade</h4>*@
