--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -31,20 +31,55 @@
             z-index: 30;
         }
     }
-  .stats {
-	display: flex;
-    text-align:center;
-    align-items:center;
-	justify-content: center;
+.countdown {
+  display: flex;
+  padding-top:20px;
+  padding-bottom:50px;
+  justify-content:center
 }
-  .border-radius
-  {
-      padding-top:15px;
-      border:1px solid #fff;
-      border-radius:50%;
-      height:90px;
-      width:90px;
-  }
+
+.countdown div {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  color: #fff;
+  margin: 0 15px;
+  font-size: 2.1em;
+  font-weight: 500;
+}
+
+.countdown div:before {
+  content: "";
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  width: 100%;
+  height: 35px;
+  background: #ffce00;
+  color: #333;
+  font-size: 0.5em;
+  line-height: 35px;
+  font-weight: 300;
+}
+
+.countdown div#day:before {
+  content: "Days";
+}
+
+.countdown div#hour:before {
+  content: "Hours";
+}
+
+.countdown div#minute:before {
+  content: "Minutes";
+}
+
+.countdown div#second:before {
+  content: "Seconds";
+}
+
 /*/ end count stats /*/
 </style>
 
@@ -54,27 +89,18 @@
     </divdash>
     <!-- row -->
     <div class="container-fluid">
-        <div class="card">
-            <div class="row">
-                <div class="stats">
-                <div class="col-lg-2 border-radius m-3">
-                    <div class="counting" data-count="20">0</div>
-                    <h5>Days</h5>
-                </div>
-
-                <div class="col-lg-2 border-radius m-3">
-                    <div class="counting" data-count="2">0</div>
-                    <h5>Months</h5>
-                </div>
-
-                <div class="col-lg-2 border-radius m-3">
-                    <div class="counting" data-count="0">0</div>
-                    <h5>Year</h5>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="card">
+                            <div class="countdown">
+                                <div id="day">na</div>
+                                <div id="hour">na</div>
+                                <div id="minute">na</div>
+                                <div id="second">na</div>
+                            </div>
+                        </div>
                 </div>
             </div>
-           </div>
-         </div>
-
             <!-- end cont stats -->
 
                     <div class="row">
@@ -1472,34 +1498,34 @@
                 <script src="~/plugins/apex/custom-apexcharts.js"></script>*@
             @*<script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>*@
 
-            <script>
-                // number count for stats, using jQuery animate
+<script>
+    var countDate = new Date("Jan 01, 2024 00:00:00").getTime();
 
-                $('.counting').each(function () {
-                    var $this = $(this),
-                        countTo = $this.attr('data-count');
+function newYear() {
+  var now = new Date().getTime();
+  gap = countDate - now;
 
-                    $({ countNum: $this.text() }).animate({
-                        countNum: countTo
-                    },
+  var second = 1000;
+  var minute = second * 60;
+  var hour = minute * 60;
+  var day = hour * 24;
 
-                    {
+  var d = Math.floor(gap / day);
+  var h = Math.floor((gap % day) / hour);
+  var m = Math.floor((gap % hour) / minute);
+  var s = Math.floor((gap % minute) / second);
 
-                        duration: 3000,
-                        easing: 'linear',
-                        step: function () {
-                            $this.text(Math.floor(this.countNum));
-                        },
-                        complete: function () {
-                            $this.text(this.countNum);
-                            //alert('finished');
-                        }
+  document.getElementById("day").innerText = d;
+  document.getElementById("hour").innerText = h;
+  document.getElementById("minute").innerText = m;
+  document.getElementById("second").innerText = s;
+}
 
-                    });
+setInterval(function () {
+  newYear();
+}, 1000);
 
-
-                });
-            </script>
+</script>
 
 
 
