--- a/MyTradeMTG/Views/Website/Index.cshtml
+++ b/MyTradeMTG/Views/Website/Index.cshtml
@@ -80,6 +80,7 @@
 </div>
 
 <!-- START ABOUT -->
+ <!-- START ABOUT -->
 <section id="about" class="about_area section-padding">
     <div class="container">
         <div class="section-title text-center">
@@ -117,7 +118,8 @@
     </div><!-- END CONTAINER -->
 </section>
 <!-- END ABOUT -->
-<!-- START TOKEN -->
+<!-- END ABOUT -->
+ <!-- START TOKEN -->
 <section id="forex" class="token_area section-padding">
     <div class="container">
         <div class="section-title text-center">
