--- a/MyTradeMTG/Views/Shared/Website_LayoutPage.cshtml
+++ b/MyTradeMTG/Views/Shared/Website_LayoutPage.cshtml
@@ -226,7 +226,7 @@
             <div class="row text-center">
                 <div class="col-lg-12 col-sm-12 col-xs-12">
                     <div class="footer_profile">
-                        <img src="asset/img/MtgCoinPng.png" class="img-fluid mb-1" style="height:5rem;" />
+                        <img src="~/MyTradeMTGWebsite/asset/img/MtgCoinPng.png" class="img-fluid mb-1" style="height:5rem;" />
                         <h2 class="text-dark mb-4 mtg_footer">MTG Coin</h2>
                         <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
