--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -88,8 +88,8 @@
     </divdash>
     <!-- row -->
     <div class="container-fluid">
-        @*@if (ViewBag.timerstatus == "0")
-        {*@ 
+        @if (ViewBag.timerstatus == "1")
+        { 
          
             <div class="row">
                 <div class="col-lg-12">
@@ -97,7 +97,7 @@
                         <div class="card-header border-none">
                         <div class="text-center offset-lg-3">
                             <h4>
-                                Please complete your direct joining beforen countdown end to upgrade <br/>your package without
+                                Please complete your direct joining before countdown end to upgrade <br/>your package without
                                 paying any extra MTG.
                             </h4>
                         </div>
@@ -111,7 +111,7 @@
                     </div>
             </div>
         </div>
-        @*}*@
+        }
                 
             <!-- end cont stats -->
 
