--- a/MyTradeMTG/Views/Website/Index.cshtml
+++ b/MyTradeMTG/Views/Website/Index.cshtml
@@ -566,7 +566,7 @@
         <!--Social login end-->
 
 
-        <!--Social errorpage statrt-->
+        <!--Social errorpage(Incorrect Login Id or Password) start-->
         <div class="error_page" style="display:none">
             <form>
                 <div class="col-sm-12">
@@ -586,7 +586,7 @@
                 </div>
             </form>
         </div>
-        <!--Social errorpage end-->
+        <!--Social errorpage(Incorrect Login Id or Password) end-->
 
 
 
