--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -233,7 +233,7 @@
                                     </a>
                                     @if (Session["Status"].ToString() != "Inactive")
                                     {
-                                        <a href="javascript:void(0)" class="dropdown-item ai-icon" data-toggle="modal" data-target="#exampleModal">
+                                        <a href="javascript.void()" class="dropdown-item ai-icon" data-toggle="modal" data-target="#exampleModal">
                                             <svg id="icon-inbox" xmlns="http://www.w3.org/2000/svg" class="text-success" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                                             <span class="ms-2">Share Link </span>
                                         </a>
