--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -80,6 +80,7 @@
   content: "Seconds";
 }
 
+
 /*/ end count stats /*/
 </style>
 
@@ -93,7 +94,7 @@
         {
          
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12" id="countdownRemove">
                     <div class="card">
                         <div class="card-header border-none">
                             <div class="text-center offset-lg-3">
@@ -106,7 +107,7 @@
                         <div class="countdown">
                             <div id="day">na</div>
                             <div id="hour">na</div>
-                            <h2 id="end"></h2>
+                            <h2 id="end" style="color:red !important;margin-top:50px;"></h2>
                             <div id="minute">na</div>
                             <div id="second">na</div>
                         </div>
@@ -434,7 +435,7 @@
                                         <h4 class="fs-20 text-black">Currency Statistics</h4>
                                         @*<p class="mb-0 fs-12">Lorem ipsum dolor sit amet, consectetur</p>*@
                                     </div>
-                                    <div class="d-flex mt-sm-0 mt-3">
+                                    @*<div class="d-flex mt-sm-0 mt-3">
                                         <div class="form-check form-switch text-end me-4 mb-2">
                                             <input type="checkbox" class="form-check-input" id="customSwitch11">
                                             <label class="form-check-label fs-14 text-black pe-2" for="customSwitch11">Date</label>
@@ -443,7 +444,7 @@
                                             <input type="checkbox" class="form-check-input" id="customSwitch12">
                                             <label class="form-check-label fs-14 text-black pe-2" for="customSwitch12">Value</label>
                                         </div>
-                                    </div>
+                                    </div>*@
                                 </div>
                                 <div class="card-body pb-0">
                                     <div class="d-flex flex-wrap crypto">
@@ -491,7 +492,7 @@
                                                 </label>
                                             </div>*@
                                     </div>
-                                    <div id="lineChart"></div>
+                                    @*<div id="lineChart"></div>*@
                                 </div>
                             </div>
                         </div>
@@ -814,7 +815,7 @@
                                 <div class="col-xl-8">
                                     <div class="card">
                                         <div class="card-body p-4">
-                                            <h4 class="card-intro-title mb-4">Rewards</h4>
+                                            <h4 class="card-intro-title mb-4">News</h4>
                                             <div class="bootstrap-carousel">
                                                 <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
                                                     <div class="carousel-indicators">
@@ -893,7 +894,7 @@
 
 
                                         <span class="s-icon"><a href="mailto:?subject= Referral Link &amp;body=http://Mytrade.global/Website/index?Pid=@Session["Pk_UserId"].ToString(). Thanks." target="_blank" style="background:#871505"><i class="fa fa-envelope fa-lg"></i></a></span>
-                                        <span class="s-icon"><a href="https://api.whatsapp.com/send?text=http://Mytrade.global//Website/index?Pid=@Session["Pk_UserId"].ToString()" target="_blank" style="background:#42f560" data-action="share/whatsapp/share"><i class="fa fa-whatsapp fa-lg"></i></a></span>
+                                        <span class="s-icon"><a href="https://api.whatsapp.com/send?text=http://Mytrade.global//Home/ShareLinkRegistration?Pid=@Session["Pk_UserId"].ToString()" target="_blank" style="background:#42f560" data-action="share/whatsapp/share"><i class="fa fa-whatsapp fa-lg"></i></a></span>
                                         <span class="s-icon"><a href="https://www.facebook.com/sharer.php?u=http://Mytrade.global//Website/index?Pid=@Session["Pk_UserId"].ToString()" target="_blank" style="background:#4267B2"><i class="fa fa-facebook fa-lg"></i></a></span>
                                         <span class="s-icon"><a href="https://www.instagram.com/?url=http://Mytrade.global//Website/index?Pid=@Session["Pk_UserId"].ToString()" target="_blank" style="background:#E1306C"><i class="fa fa-instagram fa-lg"></i></a></span>
                                         <span class="s-icon"><a href="https://twitter.com/intent/tweet?text=http://Mytrade.global//Website/index?Pid=@Session["Pk_UserId"].ToString()" target="_blank" style="background:#1DA1F2"><i class="fa fa-twitter fa-lg"></i></a></span>
@@ -1580,11 +1581,14 @@
         // Display the message when countdown is over
         if (gap < 0) {
             clearInterval(myfunc);
-            document.getElementById("day").innerText =  ""
-            document.getElementById("hour").innerText = "" 
-            document.getElementById("minute").innerText = ""
-            document.getElementById("second").innerText = ""
-            document.getElementById("end").innerText = "TIME UP!!";
+            //document.getElementById("day").style.display = "none";
+            //document.getElementById("hour").style.display = "none";
+            //document.getElementById("minute").style.display = "none";
+            //document.getElementById("second").style.display = "none";
+            document.getElementById("countdownRemove").style.display = "none";
+            //document.getElementById("end").innerText = "TIME UP !";
+
+            
         }
     }, 1000);
 
