--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -1133,6 +1133,7 @@
             chart: {
                 height: 300,
                 type: 'donut',
+                maintainAspectRatio: false,
                 toolbar: {
                     show: false,
                 }
