--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -784,8 +784,10 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="widget-content1">
-                                                <div id="chart-user2" class=""></div>
+                                            <div class="card-body p-0">
+                                                <div class="widget-content1">
+                                                    <div id="chart-user2" class=""></div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
