--- a/MyTradeMTG/Views/Home/ShareLinkRegistration.cshtml
+++ b/MyTradeMTG/Views/Home/ShareLinkRegistration.cshtml
@@ -30,7 +30,7 @@
     {
         <div class="container h-100">
             <div class="row h-100">
-                <div class="col-md-4 col-sm-12 offset-lg-4 card h-100">
+                <div class="col-md-4 col-sm-12 offset-lg-4 card h-100 mb-0">
                     <!--Register Form start-->
                     <div class="user_register card-body">
                         <form role="form" id="myForm" method="post" name="myForm" class="form-horizontal contact-form" action="/Website/RegistrationAction">
